--- a/package.json
+++ b/package.json
@@ -7,11 +7,20 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "dotenv": "^8.1.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.3.1",
+    "jsonwebtoken": "^8.5.1",
     "llg": "^1.2.1",
-    "mongoose": "^5.7.5"
+    "mongoose": "^5.8.9",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
+  },
+  "scripts": {
+    "start": "nodemon src/server.js"
   }
 }
